# rust-template

./: .gitignore  Cargo.toml  DISCKAIMER.md  README.md  cargo-generate.toml  deny.toml
.cargo/: config.toml
src/: lib.rs  main.rs
