# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "{{project-name}}"
version = "0.0.1"
edition = "2021"
authors = ["ifeisier <ifeisier@hotmail.com>"]
description = "{{project_description}}"
repository = "https://github.com/ifeisier/{{project-name}}"
license-file = "LICENSE"


[profile.release]
lto = "fat"


[dependencies]
rust_utils = { git = "https://github.com/ifeisier/rust_utils", branch = "main", version = "0.1.0" }
log = "0.4"
anyhow = "1.0.86"
thiserror = "1.0.61"
crossbeam-channel = "0.5.13"
chrono = "0.4.38"
rust_decimal = "1.35.0"
lazy_static = "1.4.0"
tokio = { version = "1.38.0", default-features = false, features = ["rt", "rt-multi-thread", "net", "time", "sync"] }
futures = "0.3.30"


[dependencies.sqlx]
version = "0.7.4"
default-features = false
features = ["runtime-tokio", "mysql", "rust_decimal", "macros", "json", "chrono"]
